<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/payment_txt_subtotal_label"
        style="@style/Label"
        android:text="@string/payment_txt_subtotal"
        android:textSize="@dimen/edit_text_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_txt_subtotal"
        style="@style/Value"
        android:text="$ 160.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payment_txt_subtotal_label" />

    <TextView
        android:id="@+id/payment_txt_discount_label"
        style="@style/Label"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/edit_text_text_size"
        android:text="@string/payment_txt_discount"
        app:layout_constraintStart_toStartOf="@+id/payment_txt_subtotal_label"
        app:layout_constraintTop_toBottomOf="@+id/payment_txt_subtotal_label" />

    <TextView
        android:id="@+id/payment_txt_discount"
        style="@style/Value"
        android:text="5%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payment_txt_discount_label" />

    <TextView
        android:id="@+id/payment_txt_shipping_label"
        style="@style/Label"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/edit_text_text_size"
        android:text="@string/payment_txt_shipping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_txt_discount_label" />

    <TextView
        android:id="@+id/payment_txt_shipping"
        style="@style/Value"
        android:text="$ 10.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payment_txt_shipping_label" />

    <View
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/divider_color"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/payment_txt_shipping_label" />

    <TextView
        android:id="@+id/payment_txt_total_label"
        style="@style/Value"
        android:layout_marginTop="12dp"
        android:text="@string/payment_txt_Total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/payment_txt_total"
        style="@style/Value"

        android:text="$ 162.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payment_txt_total_label" />


</androidx.constraintlayout.widget.ConstraintLayout>