<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Fragments.ConfirmationFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/confirmation_img_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/confirmation_btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/ic_confirmation_like" />

        <TextView
            android:id="@+id/confirmation_txt_title"
            style="@style/title"
            android:layout_marginTop="28dp"
            android:text="@string/confirmation_title"
            app:layout_constraintEnd_toEndOf="@+id/confirmation_img_like"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/confirmation_img_like"
            app:layout_constraintTop_toBottomOf="@+id/confirmation_img_like" />

        <TextView
            android:id="@+id/confirmation_txt_body"
            style="@style/OnboardingText"
            android:layout_marginTop="12dp"
            android:text="@string/confirmation_body"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/confirmation_txt_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/confirmation_txt_title"
            app:layout_constraintTop_toBottomOf="@+id/confirmation_txt_title" />

        <Button
            android:id="@+id/confirmation_btn_back"
            style="@style/third_button"
            android:text="@string/confirmation_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>